--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,9 @@
 {
+  "functions": { "source": "application/.output/server" }
   "hosting": {
     "public": "application/.output/public",
+    "cleanUrls": true,
+    "rewrites": [{ "source": "**", "function": "server" }],
     "ignore": [
       "firebase.json",
       "**/.*",
