feat(cicd): using service account for deploy;

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           args: deploy 
         env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PERSONAL_BLOG_9B630 }}
+          GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PERSONAL_BLOG_9B630 }}
